--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -28,11 +28,21 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  dcdg: ^3.1.1
+  excel: ^2.0.0-null-safety-3
+  equatable: ^2.0.2
   flutter:
     sdk: flutter
+  file_saver: ^0.0.6
+  filepicker_windows: ^2.0.0
   hive: ^2.0.4
   intl: ^0.17.0
+  percent_indicator: ^3.0.1
   provider: ^5.0.0
+  spreadsheet_decoder: ^2.0.0
+  syncfusion_flutter_pdf: ^19.1.69-beta
+  syncfusion_flutter_xlsio: ^19.1.66-beta
+  xml: ^5.1.2
 
 dev_dependencies:
   flutter_lints: ^1.0.0
@@ -43,7 +53,6 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
