--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,16 +29,18 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   dcdg: ^3.1.1
-  excel: ^2.0.0-null-safety-3
   equatable: ^2.0.2
-  flutter:
-    sdk: flutter
+  excel: ^2.0.0-null-safety-3
   file_saver: ^0.0.6
   filepicker_windows: ^2.0.0
+  flutter:
+    sdk: flutter
   hive: ^2.0.4
+  http: ^0.13.3
   intl: ^0.17.0
   percent_indicator: ^3.0.1
   provider: ^5.0.0
+  search_choices: ^2.0.7
   spreadsheet_decoder: ^2.0.0
   syncfusion_flutter_pdf: ^19.1.69-beta
   syncfusion_flutter_xlsio: ^19.1.66-beta
