--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,13 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  data_table_2: ^2.1.1
   dcdg: ^3.1.1
   equatable: ^2.0.2
   excel: ^2.0.0-null-safety-3
   file_saver: ^0.0.6
   filepicker_windows: ^2.0.0
+  fl_chart: ^0.36.4
   flutter:
     sdk: flutter
   hive: ^2.0.4
